fixing buttons on safari

--- a/app/assets/stylesheets/components/button.scss
+++ b/app/assets/stylesheets/components/button.scss
@@ -5,9 +5,9 @@
   margin-bottom: 10px;
   text-align: center;
   height: auto;
-  width: auto;
-  font-family: 'Syncopate' sans-serif;
-  font-size: 18px;
+  width: 125px;
+  font-family: 'Oswald' sans-serif;
+  font-size: 100%;
   font-weight: bold;
   background-color: rgba(3, 15, 49, 1);
   color: white;
