--- a/app/assets/stylesheets/components/list-items.scss
+++ b/app/assets/stylesheets/components/list-items.scss
@@ -18,6 +18,7 @@
   width: 250px;
   text-align: center;
   padding: 5px 10px 15px 10px;
+  overflow-wrap: break-word;
 }
 
 .list-items img {
